--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="C:\Users\Dell\OneDrive\Documents\Web Projects\finHelp\frontend\src\assets\finHelplogo.png" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Poppins:wght@400;600;700&family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>finhelp</title>
+    <title>finHelp</title>
   </head>
   <body>
     <div id="root"></div>
